--- a/templates/predict.html
+++ b/templates/predict.html
@@ -59,7 +59,7 @@
               <div class="mb-3">
                 <label for="transmission">Select Transmission Type</label>
                 <select class="form-control" id="transmission" name="transmission" placeholder="transmission" required="required">
-                  <option value="" disabled selected>Fuel Type</option>
+                  <option value="" disabled selected>Transmission Type</option>
                   <option>Automatic</option>
                   <option>Manual</option>
                 </select>
